; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/branches/extr_create.c_assert_branch_matches_name.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/branches/extr_create.c_assert_branch_matches_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }

@GIT_BUF_INIT = common dso_local global %struct.TYPE_6__ zeroinitializer, align 4
@repo = common dso_local global i32 0, align 4
@GIT_BRANCH_LOCAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [12 x i8] c"refs/heads/\00", align 1
@target = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @assert_branch_matches_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_branch_matches_name(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.TYPE_6__, align 4
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = bitcast %struct.TYPE_6__* %6 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %7, i8* align 4 bitcast (%struct.TYPE_6__* @GIT_BUF_INIT to i8*), i64 4, i1 false)
  %8 = load i32, i32* @repo, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = load i32, i32* @GIT_BRANCH_LOCAL, align 4
  %11 = call i32 @git_branch_lookup(i32** %5, i32 %8, i8* %9, i32 %10)
  %12 = call i32 @cl_git_pass(i32 %11)
  %13 = call i32 @git_buf_sets(%struct.TYPE_6__* %6, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0))
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load i8*, i8** %3, align 8
  %16 = call i32 @git_buf_puts(%struct.TYPE_6__* %6, i8* %15)
  %17 = call i32 @cl_git_pass(i32 %16)
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %6, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @git_reference_name(i32* %20)
  %22 = call i32 @cl_assert_equal_s(i32 %19, i32 %21)
  %23 = load i32*, i32** %5, align 8
  %24 = call i32 @git_reference_target(i32* %23)
  %25 = load i32, i32* @target, align 4
  %26 = call i32 @git_commit_id(i32 %25)
  %27 = call i32 @git_oid_cmp(i32 %24, i32 %26)
  %28 = call i32 @cl_git_pass(i32 %27)
  %29 = load i32*, i32** %5, align 8
  %30 = call i32 @git_reference_free(i32* %29)
  %31 = call i32 @git_buf_dispose(%struct.TYPE_6__* %6)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @cl_git_pass(i32) #2

declare dso_local i32 @git_branch_lookup(i32**, i32, i8*, i32) #2

declare dso_local i32 @git_buf_sets(%struct.TYPE_6__*, i8*) #2

declare dso_local i32 @git_buf_puts(%struct.TYPE_6__*, i8*) #2

declare dso_local i32 @cl_assert_equal_s(i32, i32) #2

declare dso_local i32 @git_reference_name(i32*) #2

declare dso_local i32 @git_oid_cmp(i32, i32) #2

declare dso_local i32 @git_reference_target(i32*) #2

declare dso_local i32 @git_commit_id(i32) #2

declare dso_local i32 @git_reference_free(i32*) #2

declare dso_local i32 @git_buf_dispose(%struct.TYPE_6__*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
